fix the grid and overflow for list column

--- a/less/main.less
+++ b/less/main.less
@@ -17,6 +17,8 @@
     max-width: 600px;
     margin: auto;
     transition: opacity 0.3s ease-in-out 0s;
+    height: 100vh;
+    overflow-y: auto;
 }
 
 .left-nav {
